# sqsutil

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml  requirements.txt
awsutil/: main.py
events/: alerting.json
sqs_util/: main.py  util.py
sqsutil/: main.py  util.py
