[tool.poetry]
name = "awsutil"
version = "0.2.0"
description = "High-level wrapper around certain AWS services for specific use cases"
authors = ["Tobias Waslowski <tobias.waslowski@otto-payments.de>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "awsutil", from = "." }
]

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.151"
click = "^8.1.7"

[tool.poetry.scripts]
awsutil = "awsutil.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
